--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   .panel { background:#2b2b2b; padding:1em; border-radius:8px; flex:1; min-width:300px; max-width:600px; }
   button { margin-top:0.5em; padding:0.5em 1em; font-size:1em; border:none; border-radius:4px; cursor:pointer; }
   input, select, textarea { width:100%; margin-top:0.5em; padding:0.5em; border-radius:4px; border:none; }
-  #npl-interface { height:150px; overflow-y:auto; background:#1b1b1b; padding:0.5em; border-radius:4px; }
+  #nlp-interface { height:150px; overflow-y:auto; background:#1b1b1b; padding:0.5em; border-radius:4px; }
 </style>
 </head>
 <body>
@@ -22,7 +22,7 @@
   <div class="panel" id="scene-manager">
     <h3>Scenes & Nodes</h3>
     <input type="text" id="scene-name" placeholder="Scene name">
-    <button onclick="addScene()">Add Scene</button>
+    <button onclick="addSceneGUI()">Add Scene</button>
     <div id="scene-list"></div>
     <hr>
     <input type="text" id="node-name" placeholder="Node name">
@@ -35,7 +35,7 @@
       <option>Camera2D</option>
     </select>
     <input type="text" id="parent-name" placeholder="Parent node (optional)">
-    <button onclick="addNode()">Add Node</button>
+    <button onclick="addNodeGUI()">Add Node</button>
     <div id="node-list"></div>
   </div>
 
@@ -49,7 +49,7 @@
       <option value="audio">Audio</option>
       <option value="font">Font</option>
     </select>
-    <button onclick="uploadAssets()">Upload Asset(s)</button>
+    <button onclick="uploadAssetsGUI()">Upload Asset(s)</button>
     <ul id="asset-list"></ul>
   </div>
 
@@ -57,56 +57,55 @@
   <div class="panel" id="export-panel">
     <h3>Export Project</h3>
     <input type="text" id="project-name" placeholder="Project Name">
-    <button onclick="generateProject()">Generate & Download ZIP</button>
+    <button onclick="generateProjectGUI()">Generate & Download ZIP</button>
     <div id="export-status"></div>
   </div>
 
   <!-- NLP Interface -->
   <div class="panel" id="nlp-panel">
     <h3>NLP Interface</h3>
-    <div id="npl-interface"></div>
+    <div id="nlp-interface"></div>
     <input type="text" id="nlp-command" placeholder="Type command here">
-    <button onclick="sendNLPCommand()">Send</button>
+    <button onclick="sendNLPCommandGUI()">Send</button>
   </div>
 </div>
 
+<script src="godot.js"></script>
 <script>
-  // Placeholder in-memory project structures
-  const ProjectGraph = { scenes: {}, assets: {} };
-  
-  // --- Scene & Node Functions ---
-  function addScene() {
+  // --- GUI functions connecting to Godot backend ---
+
+  function addSceneGUI() {
     const name = document.getElementById("scene-name").value.trim();
     if(!name) return alert("Enter scene name");
-    if(ProjectGraph.scenes[name]) return alert("Scene already exists");
-    ProjectGraph.scenes[name] = { nodes:{}, scripts:{} };
+    ProjectManager.add_scene(name); // Godot singleton
     document.getElementById("scene-list").innerHTML += `<div>${name}</div>`;
     appendNLP(`Scene '${name}' added.`);
   }
 
-  function addNode() {
-    const sceneList = Object.keys(ProjectGraph.scenes);
-    if(sceneList.length === 0) return alert("Add a scene first");
+  function addNodeGUI() {
     const nodeName = document.getElementById("node-name").value.trim();
     const nodeType = document.getElementById("node-type").value;
     const parent = document.getElementById("parent-name").value.trim();
-    const sceneName = sceneList[sceneList.length-1]; // Add to last scene for simplicity
-    if(!nodeName) return alert("Enter node name");
-    ProjectGraph.scenes[sceneName].nodes[nodeName] = { type: nodeType, parent: parent, scripts: [], properties:{} };
+    const sceneList = document.getElementById("scene-list").children;
+    if(sceneList.length === 0) return alert("Add a scene first");
+    const sceneName = sceneList[sceneList.length-1].innerText; // last scene
+    ProjectManager.add_node(sceneName, nodeName, nodeType, parent);
     document.getElementById("node-list").innerHTML += `<div>${nodeName} (${nodeType})</div>`;
     appendNLP(`Node '${nodeName}' of type '${nodeType}' added to scene '${sceneName}'.`);
   }
 
-  // --- Asset Functions ---
-  function uploadAssets() {
+  function uploadAssetsGUI() {
     const files = document.getElementById("asset-upload").files;
     const type = document.getElementById("asset-type").value;
-    if(files.length === 0) return alert("Select files to upload");
     const list = document.getElementById("asset-list");
+    if(files.length === 0) return alert("Select files to upload");
+
     for(let file of files){
       const reader = new FileReader();
       reader.onload = (e) => {
-        ProjectGraph.assets[file.name] = { type:type, data:e.target.result };
+        // Pass ArrayBuffer to Godot singleton
+        const arrayBuffer = e.target.result;
+        ProjectManager.upload_asset(file.name, type, arrayBuffer);
         list.innerHTML += `<li>${file.name} (${type})</li>`;
         appendNLP(`Asset '${file.name}' uploaded as ${type}.`);
       };
@@ -114,48 +113,39 @@
     }
   }
 
-  // --- Export Function ---
-  function generateProject() {
+  function generateProjectGUI() {
     const projectName = document.getElementById("project-name").value.trim() || "GodotProject";
     const status = document.getElementById("export-status");
     status.innerText = "Generating project ZIP...";
     appendNLP(`Generating project '${projectName}'...`);
 
-    // HTML5 ZIP generation using JSZip (placeholder)
-    // Replace this with JSZip integration in real usage
+    ProjectManager.generate_project(projectName); // triggers ZipExporter
+    // Placeholder: listen to export_finished signal from ProjectManager
     setTimeout(() => {
       status.innerText = `Project '${projectName}' ZIP ready for download (placeholder).`;
       appendNLP(`Project '${projectName}' generation complete.`);
     }, 1000);
   }
 
-  // --- NLP Interface ---
-  function sendNLPCommand() {
+  function sendNLPCommandGUI() {
     const cmd = document.getElementById("nlp-command").value.trim();
     if(!cmd) return;
     appendNLP(`> ${cmd}`);
     document.getElementById("nlp-command").value = "";
-    
-    // Placeholder NLP behavior: simple command recognition
-    if(cmd.toLowerCase().includes("snake")){
-      addScene();
-      appendNLP("Template for 'Snake' game suggested. Nodes and scripts can be added manually or via NLP engine.");
-    } else if(cmd.toLowerCase().includes("thumbstick")){
-      const sceneName = Object.keys(ProjectGraph.scenes)[0];
-      if(sceneName){
-        ProjectGraph.scenes[sceneName].nodes["VirtualJoystick"] = { type:"Control", parent:"", scripts:[], properties:{position:"Vector2(50,50)"} };
-        appendNLP("Thumbstick added to the scene.");
-      }
-    } else {
-      appendNLP("Command recognized but no automated action available (placeholder).");
-    }
+    const response = ProjectManager.process_nlp_command(cmd);
+    appendNLP(response);
   }
 
   function appendNLP(message) {
-    const panel = document.getElementById("npl-interface");
+    const panel = document.getElementById("nlp-interface");
     panel.innerHTML += `<div>${message}</div>`;
     panel.scrollTop = panel.scrollHeight;
   }
+
+  // --- Initialize Godot Runtime ---
+  // Assumes Godot HTML5 export instance is loaded as 'godotInstance'
+  let godotInstance = null; // Set your Godot instance here
+  if(window.godotInstance) initGodotRuntime(window.godotInstance);
 </script>
 </body>
 </html>
