--- a/index.html
+++ b/index.html
@@ -70,14 +70,18 @@
   </div>
 </div>
 
+<!-- Local Libraries -->
+<script src="libs/jszip.min.js"></script>
+<script src="libs/FileSaver.min.js"></script>
 <script src="godot.js"></script>
+
 <script>
   // --- GUI functions connecting to Godot backend ---
 
   function addSceneGUI() {
     const name = document.getElementById("scene-name").value.trim();
     if(!name) return alert("Enter scene name");
-    ProjectManager.add_scene(name); // Godot singleton
+    ProjectManager.add_scene(name);
     document.getElementById("scene-list").innerHTML += `<div>${name}</div>`;
     appendNLP(`Scene '${name}' added.`);
   }
@@ -88,7 +92,7 @@
     const parent = document.getElementById("parent-name").value.trim();
     const sceneList = document.getElementById("scene-list").children;
     if(sceneList.length === 0) return alert("Add a scene first");
-    const sceneName = sceneList[sceneList.length-1].innerText; // last scene
+    const sceneName = sceneList[sceneList.length-1].innerText;
     ProjectManager.add_node(sceneName, nodeName, nodeType, parent);
     document.getElementById("node-list").innerHTML += `<div>${nodeName} (${nodeType})</div>`;
     appendNLP(`Node '${nodeName}' of type '${nodeType}' added to scene '${sceneName}'.`);
@@ -103,7 +107,6 @@
     for(let file of files){
       const reader = new FileReader();
       reader.onload = (e) => {
-        // Pass ArrayBuffer to Godot singleton
         const arrayBuffer = e.target.result;
         ProjectManager.upload_asset(file.name, type, arrayBuffer);
         list.innerHTML += `<li>${file.name} (${type})</li>`;
@@ -113,18 +116,42 @@
     }
   }
 
-  function generateProjectGUI() {
+  async function generateProjectGUI() {
     const projectName = document.getElementById("project-name").value.trim() || "GodotProject";
     const status = document.getElementById("export-status");
     status.innerText = "Generating project ZIP...";
     appendNLP(`Generating project '${projectName}'...`);
 
-    ProjectManager.generate_project(projectName); // triggers ZipExporter
-    // Placeholder: listen to export_finished signal from ProjectManager
-    setTimeout(() => {
-      status.innerText = `Project '${projectName}' ZIP ready for download (placeholder).`;
-      appendNLP(`Project '${projectName}' generation complete.`);
-    }, 1000);
+    const zip = new JSZip();
+
+    // --- Add Scenes & Scripts ---
+    const scenes = ProjectManager.get_scenes(); // Implement in GDScript singleton
+    for (const sceneName in scenes) {
+      const scene = scenes[sceneName];
+      const tscnContent = ProjectManager.get_scene_file(sceneName);
+      zip.file(`${projectName}/${sceneName}.tscn`, tscnContent);
+      for (const scriptName in scene.scripts) {
+        const code = scene.scripts[scriptName];
+        zip.file(`${projectName}/scripts/${scriptName}.gd`, code);
+      }
+    }
+
+    // --- Add Assets ---
+    const assets = ProjectManager.list_assets(); // {filename: {type, data}}
+    for (const assetName in assets) {
+      const asset = assets[assetName];
+      zip.file(`${projectName}/assets/${assetName}`, asset.data);
+    }
+
+    // --- Add Made-by Slide ---
+    const introScene = `[node name="MadeByIntro" type="Label" parent=""]\ntext = "Made with GodotGameAssembler by CCVO"\n`;
+    zip.file(`${projectName}/MadeByIntro.tscn`, introScene);
+
+    // --- Generate ZIP and trigger download ---
+    const content = await zip.generateAsync({ type: "blob" });
+    saveAs(content, `${projectName}.zip`);
+    status.innerText = `Project '${projectName}' ZIP ready for download.`;
+    appendNLP(`Project '${projectName}' generated and ready for download.`);
   }
 
   function sendNLPCommandGUI() {
@@ -142,10 +169,10 @@
     panel.scrollTop = panel.scrollHeight;
   }
 
-  // --- Initialize Godot Runtime ---
-  // Assumes Godot HTML5 export instance is loaded as 'godotInstance'
-  let godotInstance = null; // Set your Godot instance here
+  // Initialize Godot Runtime (assumes instance is available)
+  let godotInstance = null; // Replace with your Godot HTML5 export instance
   if(window.godotInstance) initGodotRuntime(window.godotInstance);
+
 </script>
 </body>
 </html>
